<!-- fragment_quiz.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/question_text"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/answers_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/answer_option_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_option_1" />

        <RadioButton
            android:id="@+id/answer_option_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_option_2" />

        <RadioButton
            android:id="@+id/answer_option_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_option_3" />
    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>
